# gitpodflix-demo

./: .gitignore  Cargo.toml  KUBERNETES.md  MIGRATION.md  README.md  agent.yml  plan.md  renovate-jest-only.json  start_app.sh  test-auth.txt
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust-backend-tests.yml
.gitpod/: automations.yaml
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: main.rs
backend-rust/src/handlers/: mod.rs  movie_handlers.rs
backend-rust/src/models/: movie.rs
backend-rust/src/services/: catalog_service.rs
backend-rust/src/utils/: data_processor.rs  mod.rs  movie_utils.rs
backend/catalog/: .env.example  README.md  jest.config.js  package-lock.json  package.json
demos/: fixing-renovate-dependencies.md
django_backend/: manage.py  start.sh
django_backend/catalog/: admin.py  models.py  serializers.py  views.py
django_backend/gitpodflix/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  package.json.bak  vite.config.js  vitest.config.js  vitest.config.ts
frontend/scripts/: check-movie-images.js  check-movie-images.test.js
frontend/src/: App.jsx  App.test.jsx  index.css  main.test.jsx  setupTests.js
frontend_dist/: index.html
k8s/: catalog-service.yaml  frontend.yaml  postgres.yaml
react_frontend/: package-lock.json  package.json
react_frontend/src/: App.jsx  index.css
scripts/: add_score.js  create_game.js  package-lock.json  package.json  setup-minikube.sh
src/: main.rs
src/catalog/: main.rs
(+42 files in other folders)
